--- a/02. Master Your Sleep & Be More Alert When Awake.md
+++ b/02. Master Your Sleep & Be More Alert When Awake.md
@@ -14,7 +14,7 @@ Today's podcast episode is all about sleep, and we're also going to talk about t
 
 Today's podcast is brought to us by Helix mattresses. Having the proper sleep environment — both the environment you're sleeping in and the object you're sleeping on — is critically important to getting a good night's sleep. Helix mattresses are a little different than most because they're matched to your specific sleep needs, as well as whether or not you tend to run hot or cold as you sleep through the night, what position you sleep in, and so forth, so if you go to their website, they have a quiz that you can take that matches you to the particular mattress that's going to be best for your sleep needs. I've always had a lot of trouble sleeping — I'm one of these people that can fall asleep easily, but then I wake up and I have a hard time getting back to sleep — and once I switched to a Helix mattress that was precisely matched to my sleep needs, I found I could sleep through the night, which has made a tremendous difference for me. If you want to try Helix mattresses, you can go to helixsleep.com/huberman, and that will give you up to $200 off on a mattress order, as well as two pillows free with your mattress order, and, of course, having the proper pillows is just as important as having the proper mattress.
 
-Today's podcast is also brought to us by Headspace, Headspace is a meditation app that teaches you how to meditate. It's fair to say that now there's a ton of research out there in peer-reviewed journals supporting the fact that mindfulness meditation can support mental and physical health, but many people find it hard to meditate; in fact, I'm one of these people. I started meditating in my teens, but then I would drop it every few weeks or so and then I'd get back to it maybe the following week or every year, I just was not very regular about my meditation practice, and then a few years ago I was flying a lot for work and I was on JetBlue flights, and they have Headspace as part of the choice of things that you can watch on the TV screen, and as I started meditating more regularly, what I found is my sleep was better, I would arrive feeling more rested, it was just a tremendous effects on my work performance and other aspects of my life. If you want to try Headspace, you can go to headspace.com/specialoffer; if you do that, you'll get one month of all of Headspace's meditations for free; that's the best offer right now, so if [you're] interested, go to headspace.com/special offer.
+Today's podcast is also brought to us by Headspace. Headspace is a meditation app that teaches you how to meditate. It's fair to say that now, there's a ton of research out there in peer-reviewed journals supporting the fact that mindfulness meditation can support mental and physical health, but many people find it hard to meditate; in fact, I'm one of these people. I started meditating in my teens, but then I would drop it every few weeks or so, and then I'd get back to it maybe the following week or every year. I just was not very regular about my meditation practice, and then a few years ago, I was flying a lot for work, and I was on JetBlue flights, and they have Headspace as part of the choice of things that you can watch on the TV screen. And as I started meditating more regularly, what I found is my sleep was better, I would arrive feeling more rested, it was just a tremendous effects on my work performance and other aspects of my life. If you want to try Headspace, you can go to headspace.com/specialoffer; if you do that, you'll get one month of all of Headspace's meditations for free; that's the best offer right now, so if [you're] interested, go to headspace.com/special offer.
 </details>
 
 <details>
@@ -23,7 +23,7 @@ Today's podcast is also brought to us by Headspace, Headspace is a meditation ap
     
 So let's talk about sleep. Sleep is this incredible period of our lives where we are not conscious. We might dream, we might twitch, we might even wake up, but in sleep, we are only in relation to things that are happening within our brain and body. Outside sensory experience, in most cases, can't really impact us, and yet, sleep is this tremendously important period of life because it resets our ability to be focused, alert, and emotionally stable in the wakeful period. So we can't really talk about wakefulness, focus, motivation, mood, wellbeing without thinking about sleep, and that's why we're devoting this entire month to the discussion about sleep. Now, we also can't talk about sleep and think about sleep without thinking about wakefulness, because it turns out that the period that we call sleep and the period we call wakefulness are tethered to one another. What we do in the waking state determines when we fall asleep, how quickly we fall asleep, whether or not we stay asleep, and how we feel when we wake up the next day.
 
-And today, we're going to talk mostly about how to get better at sleeping, and the reason for starting the conversation that way as opposed to just diving into a lot of biology about sleep, is because, first of all, there's a lot of information out there already about the biology of sleep. We're going to touch on a little bit of this, things like stages of sleep and sleep spindles, melatonin, and dreaming, but I think that by now, most people are aware that getting a really good night's sleep on a consistent basis is critically important, but most people don't know how to do that. In fact, I'm guessing that very few of you out there are consistently getting seven to nine hours of really terrific sleep, waking up feeling rested and like you're ready to attack the day, and being able to go through the day feeling focused and alert without dips in energy or focus. So if you're like most people, which includes me, you have some challenges with sleep at least every third or fifth night or so and maybe even more often, so we're really going to go tool-heavy today and talk about tools that can help you fall asleep, sleep better, and emerge from sleep feeling more rested, and we're going to do that by grounding our discussion of tools in peer-reviewed studies — mostly from the last 10 years, although some even more recent than that — and we're going to start by discussing what is sleep and what governs the timing of the onset of sleep — in other words, what makes you get sleepy at a particular time of day.
+And today, we're going to talk mostly about how to get better at sleeping, and the reason for starting the conversation that way as opposed to just diving into a lot of biology about sleep, is because, first of all, there's a lot of information out there already about the biology of sleep. We're going to touch on a little bit of this — things like stages of sleep and sleep spindles, melatonin, and dreaming — but I think that, by now, most people are aware that getting a really good night's sleep on a consistent basis is critically important, but most people don't know how to do that. In fact, I'm guessing that very few of you out there are consistently getting seven to nine hours of really terrific sleep, waking up feeling rested and like you're ready to attack the day, and being able to go through the day feeling focused and alert without dips in energy or focus. So if you're like most people, which includes me, you have some challenges with sleep at least every third or fifth night or so and maybe even more often, so we're really going to go tool-heavy today and talk about tools that can help you fall asleep, sleep better, and emerge from sleep feeling more rested, and we're going to do that by grounding our discussion of tools in peer-reviewed studies — mostly from the last 10 years, although some even more recent than that — and we're going to start by discussing what is sleep and what governs the timing of the onset of sleep — in other words, what makes you get sleepy at a particular time of day.
 </details>
 
 <details>
